<resources>
    <string name="app_name">Vibez Chat</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="person_chatting_image">Person chatting image</string>
</resources>